alb.tf
# Application Load Balancer
resource "aws_lb" "application_load_balancer" {
  name                       = "${var.environment)-${var.project_name}-alb"
  internal                   = false
  load_balancer_type         = "application"
  security_groups            = [aws_security_group.alb_security_group.id]
  subnets                    = [aws_subnet.public_subnet_azl.id, aws_subnet.public_subnet_az2.id]
  enable_deletion_protection = false

  tags = {
    Name = "${var.environment}-${var.project_name}-alb"
  } 
} 

# Target group for ALB
resource "aws_1b_target_group" "alb_target_group" {
  name        = "${var.environment)-${var.project_name}-tg"
  target_type = var.target_type
  port        = 80
  protocol    = "HTTP"
  vpc_id v    = aws_vpc.vpc.id

health_check {
  healthy_threshold   = 5
  interval            = 30
  matcher             = "200,301, 382"
  path                = var.health_check_path 
  port                = "traffic-port"
  protocol            = "HTTP"
  timeout             = 5
  unhealthy_threshold = 2
 }
}



# HTTP listener - redirects to HTTPS
resource"aws_1b_listener" "alb_http_listener" {
  load balancer_arn = aws_lb.application_load_balancer.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    type ="redirect"

    redirect {
      port = 443
      protocol = "HTTPS"
      status_code = "HTTP_301"
    }
  }
}

# HTTPS listener forwards to target group 
resource "aws_lb_listener" "alb_https_listener" {
  load_balancer_arn = aws_lb.application_load_balancer.arn
  port              = 443
  protocol          = "HTTPS"
  ssl_policy        = "ELBSecurityPolicy-2016-08"
  certificate_arn   = aws_acm_certificate.acm_certificate.arn

default_action {
  type             = "forward"
  target_group_arn = aws_1b_target_group.alb_target_group.arn
 }
}
